compile jEdit from source, you should comment out the "jdk14" property
in build.xml.

+ New Features

- Soft wrap.
  - Three wrapping modes are available:
    "none" - no wrapping is performed
    "soft" - soft wrap
    "hard" - this is the old hard wrap feature that has been available
    since jEdit 3.0.
  - Change the wrap mode in Global Options or Buffer Options
  - You can set the 'Wrap margin' setting to zero to wrap to the width
    of the text area. Some plugins will need to be updated; see below
- Two JDK 1.4-specific options added to 'Appearance' option pane:
  'Draw window borders using Swing look & feel', 'Draw dialog box
  borders using Swing look & feel'. Both are disabled by default.
- New 'Keyboard Tester' command in Utilities->Troubleshooting menu; it
  displays a 'grab key' dialog and dumps key events into a new buffer
- Option to split file dialogs vertically (Ollie Rutherfurd)
- Plugin manager's install plugins dialog box now shows plugin download
  sizes, and has a slightly improved look
- jEdit Frequently Asked Questions is now included in the online help
  (John Gellene)
- Prolog syntax highlighting (Giulio Piancastelli)

+ Enhancements

- Firewall plugin integrated into editor core
- Global Options dialog box now has an 'Overview' page
- Better GZIP file auto-detection; previously, jEdit would check for a
  filename extension of .gz, now it checks for the GZIP magic number at
  the start of the file
- Unicode files are now automatically detected as being such, and opened
  with the Unicode encoding
- 'Narrow to Fold' on a collapsed fold now automatically expands the
  fold
- The complete word changes started in 4.0pre3 are now complete.
  - UP/DOWN arrow keys wrap selection around in complete word list
  - Keywords are now completed (and shown in the list in a bold font)
  - The popup is updated on the fly if you type or press BACKSPACE while
    it is showing
- In the file system browser, trying to add a file to the favorites now